--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   "homepage": "https://github.com/mjande/the-weather-app#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "2.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
